objects/Apigee__mdt.object
<CustomObject>
    <fields>
        <fullName>Production_Apigee_Endpoint__c</fullName>
        <label>Production Apigee Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Authorization_Endpoint__c</fullName>
        <label>Production Authorization Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Client_Id__c</fullName>
        <label>Production Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Client_Secret__c</fullName>
        <label>Production Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Username__c</fullName>
        <label>Sync Username</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Test_Apigee_Endpoint__c</fullName>
        <label>Test Apigee Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Authorization_Endpoint__c</fullName>
        <label>Test Authorization Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Client_Id__c</fullName>
        <label>Test Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Client_Secret__c</fullName>
        <label>Test Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Apigee API Details</label>
    <pluralLabel>Apigee API Details</pluralLabel>
</CustomObject>